# hspec-sample

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  hie.yaml  hspec-sample.cabal  package.yaml
app/: Main.hs
src/HspecSample/: App.hs  Config.hs  Impl.hs  MonadApp.hs  MonadAsk.hs  MonadPrint.hs
test/: Spec.hs
test/HspecSample/Spec/: AppSpec.hs  Mock.hs
