cabal-version:      2.4
name:               hspec-sample
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/tana-gh/hspec-sample

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        HspecSample.App,
        HspecSample.Config,
        HspecSample.Impl,
        HspecSample.MonadApp,
        HspecSample.MonadAsk,
        HspecSample.MonadPrint

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        mtl

    hs-source-dirs:   src
    default-language: Haskell2010

executable hspec-sample
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        mtl
        
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hspec-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        hspec,
        mtl
