cabal-version:      2.4
name:               hspec-sample
version:            0.1.0.0
synopsis:

homepage:           https://github.com/tana-gh/hspec-sample

license:            BSD-3-Clause
license-file:       LICENSE
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        HspecSample.App,
        HspecSample.Config,
        HspecSample.Impl,
        HspecSample.MonadApp,
        HspecSample.MonadAsk,
        HspecSample.MonadPrint

    build-depends:
        base ^>=4.14.1.0,
        mtl

executable hspec-sample
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        mtl
        
test-suite hspec-sample-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        hspec,
        mtl
