cabal-version:      2.4
name:               hspec-sample
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             tana-gh
maintainer:         yozoranotakaku@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common exe-options
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
    exposed-modules:
        HspecSample.App,
        HspecSample.Config,
        HspecSample.Impl,
        HspecSample.MonadApp,
        HspecSample.MonadAsk,
        HspecSample.MonadPrint

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        mtl

    hs-source-dirs:   src
    default-language: Haskell2010

executable hspec-sample
    import: exe-options

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hspec-sample-test
    import: exe-options
    
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.14.1.0,
        hspec-sample,
        hspec,
        mtl
    
    other-modules:
        HspecSample.Spec.AppSpec
        HspecSample.Spec.Mock
